--- a/pom.xml
+++ b/pom.xml
@@ -554,8 +554,8 @@
                 </executions>
                 -->
                 <configuration>
-                    <repository>gateway</repository>
-                    <tag>latest</tag>
+                    <repository>registry.gitlab.com/foxtechvn/jhipster-gateway</repository>
+                    <tag>social-login</tag>
                     <contextDirectory>${project.build.directory}</contextDirectory>
                 </configuration>
             </plugin>
