--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -11,11 +11,11 @@
     "serverPort": "8080",
     "authenticationType": "jwt",
     "cacheProvider": "hazelcast",
-    "enableHibernateCache": false,
+    "enableHibernateCache": true,
     "websocket": "spring-websocket",
-    "databaseType": "mongodb",
-    "devDatabaseType": "mongodb",
-    "prodDatabaseType": "mongodb",
+    "databaseType": "sql",
+    "devDatabaseType": "mariadb",
+    "prodDatabaseType": "mariadb",
     "searchEngine": false,
     "messageBroker": false,
     "serviceDiscoveryType": "consul",
