--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,6 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
@@ -205,10 +204,6 @@
         <dependency>
             <groupId>javax.cache</groupId>
             <artifactId>cache-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
@@ -538,8 +533,8 @@
                 <configuration>
                     <changeLogFile>src/main/resources/config/liquibase/master.xml</changeLogFile>
                     <diffChangeLogFile>src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
-                    <driver>org.mariadb.jdbc.Driver</driver>
-                    <url>jdbc:mariadb://localhost:3306/gateway</url>
+                    <driver></driver>
+                    <url></url>
                     <defaultSchemaName></defaultSchemaName>
                     <username></username>
                     <password></password>
